[te] update from Pootle (firefox)

--- a/te/browser/chrome/browser/loop/loop.properties
+++ b/te/browser/chrome/browser/loop/loop.properties
@@ -136,14 +136,19 @@ edit_contact_done_button=అయినది
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-audio_call_menu_button=ఆడియో మార్పు
+audio_call_menu_button=ఆడియో సంభాషణ
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=వీడియో సంభాషణ
 
 # Conversation Window Strings
 
+initiate_call_button_label2=మీ సంభాషణ ప్రారంభించుటకు సిద్దమేనా?
+incoming_call_title2=సంభాషణ అభ్యర్దన
+incoming_call_accept_button=ఆమోదించు
+incoming_call_accept_audio_only_tooltip=గొంతుతో ఆమోదించు
 incoming_call_block_button=అడ్డగించు
 hangup_button_caption2=నిష్క్రమించు
 mute_local_audio_button_title=మీ శ్రవ్యకం వినిపించనీయకు
