--- a/fa/mobile/android/chrome/sync.properties
+++ b/fa/mobile/android/chrome/sync.properties
@@ -31,3 +31,8 @@ sync.setup.tryagain=تلاش مجدد
 sync.setup.manual=برپایی دستی
 
 sync.message.notabs=هیچ زبانه از رایانه‌های دیگر شما.
+
+# LOCALIZATION NOTE (promoBanner.message.text): First part of the message displayed in a
+# banner on about:home. The final space separates this text from the link.
+
+# LOCALIZATION NOTE (promoBanner.message.link): Second part of the message, styled as a link.
