[hi-IN] update from Pootle (mobile)

--- a/hi-IN/mobile/android/chrome/webapp.properties
+++ b/hi-IN/mobile/android/chrome/webapp.properties
@@ -47,6 +47,7 @@ installUpdateTitle=#1 डाउनलोड किए गए को अद्य
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: 3 updates failed
+retrievalFailedTitle=#1 अद्यतन विफल;#1 अद्यतन विफल
 
 # LOCALIZATION NOTE (retrievalFailedMessage): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
