[browser] Bug 1014332 new about:providerdirectory page that appears in share panel

--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,6 +100,9 @@ quit-button.tooltiptext.mac = Quitter %1$S (%2$S)
 loop-call-button.label = Inviter quelqu'un à discuter
 loop-call-button.tooltiptext = Inviter quelqu'un à discuter
 
+social-share-button.label = Partager cette page
+social-share-button.tooltiptext = Partager cette page
+
 panic-button.label = Effacer des données
 panic-button.tooltiptext = Effacer des données de l'historique de navigation
 
