--- a/pt-BR/browser/chrome/browser/devtools/debugger.properties
+++ b/pt-BR/browser/chrome/browser/devtools/debugger.properties
@@ -35,7 +35,7 @@ ToolboxDebugger.tooltip=Depurar JavaScript
 # LOCALIZATION NOTE (debuggerMenu.commandkey, debuggerMenu.accesskey)
 # Used for the menuitem in the tool menu
 debuggerMenu.commandkey=s
-debuggerMenu.accesskey=D
+debuggerMenu.accesskey=u
 
 # LOCALIZATION NOTE (collapsePanes): This is the tooltip for the button
 # that collapses the left and right panes in the debugger UI.
