--- a/pt-BR/browser/chrome/browser/devtools/webconsole.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webconsole.properties
@@ -33,7 +33,7 @@ close.accesskey=F
 update.button=Atualizar
 update.accesskey=A
 cmd.commandkey=K
-webConsoleCmd.accesskey=w
+webConsoleCmd.accesskey=L
 
 # LOCALIZATION NOTE (timestampFormat): %1$02S = hours (24-hour clock),
 # %2$02S = minutes, %3$02S = seconds, %4$03S = milliseconds.
@@ -121,7 +121,7 @@ timeEnd=%1$S: %2$S\u202fms
 
 # LOCALIZATION NOTE (noCounterLabel): this string is used to display
 # count-messages with no label provided.
-noCounterLabel=<no label>
+noCounterLabel=<sem rótulo>
 
 # LOCALIZATION NOTE (Autocomplete.blank): this string is used when inputnode
 # string containing anchor doesn't matches to any property in the content.
@@ -241,3 +241,19 @@ selfxss.okstring=permitir colagem
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Exibir/ocultar detalhes da mensagem.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 espaço vazio;#1 espaços vazios
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(índice)
+table.iterationIndex=(índice de iteração)
+table.key=Chave
+table.value=Valores
