--- a/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
@@ -11,6 +11,16 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedTitle):
+# This string is displayed as as the title of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedTitle=Alterações não salvas
+
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
+# This string is displayed as the message of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=Você possui alterações não salvas que serão perdidas se você sair. Tem certeza que deseja continuar?
+
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
 # file / folder to be deleted.
