--- a/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Painel Scratchpad
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Scratchpad
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Alerta antifraude: tenha cuidado ao colar coisas que você não entende. Isto poderia permitir o roubo da sua identidade ou tomar o controle do seu computador. Por favor, digite “%S” no Scratchpad abaixo para permitir a colagem.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=permitir colagem
