--- a/pt-BR/browser/chrome/browser/devtools/toolbox.properties
+++ b/pt-BR/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Ferramentas do desenvolvedor
 # for the options panel tab.
 optionsButton.tooltip=Opções da caixa de ferramentas
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Opções
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=Painel de opções Toolbox
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=J
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Selecionar um elemento da página
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tema escuro
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Tema claro
