[S] devtools: Bug 1080013 - string change for devtools

--- a/it/browser/chrome/browser/devtools/timeline.properties
+++ b/it/browser/chrome/browser/devtools/timeline.properties
@@ -10,3 +10,4 @@ timeline.records = RISULTATI
 timeline.label.styles = Stili
 timeline.label.reflow = Reflow
 timeline.label.paint = Paint
+timeline.label.domevent = Eventi DOM
