--- a/it/netwerk/necko.properties
+++ b/it/netwerk/necko.properties
@@ -26,3 +26,4 @@ PhishingAuth = Si sta per visitare “%1$S”. Questo sito potrebbe tentare di i
 PhishingAuthAccept = Si comprende il rischio e si presterà massima attenzione
 SuperfluousAuth = Ci si sta autenticando sul sito “%1$S” con nome utente “%2$S” ma il sito non richiede autenticazione. Potrebbe trattarsi di un tentativo di truffa.\n\n“%1$S” è il sito che si desidera visitare?
 AutomaticAuth = Ci si sta autenticando sul sito “%1$S” con nome utente “%2$S”.
+TrackingUriBlocked = La risorsa “%1$S” è stata bloccata in quanto è attiva la protezione antitracciamento.
