--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -49,9 +49,9 @@ email-link-button.label = Invia link
 email-link-button.tooltiptext3 = Invia link a questa pagina per email
 quit-button.tooltiptext.linux2 = Esci da %1$S (%2$S)
 quit-button.tooltiptext.mac = Esci da %1$S (%2$S)
-loop-call-button2.label = Avvia una conversazione\u00AD
+loop-call-button2.label = Avvia conversazione
 loop-call-button2.tooltiptext = Avvia una conversazione
-social-share-button.label = Condividi questa pagina\u00AD
+social-share-button.label = Condividi pagina\u00AD
 social-share-button.tooltiptext = Condividi questa pagina
 panic-button.label = Dimentica
 panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
