Suggestions from Ivar Smolin

--- a/et/mobile/android/chrome/browser.properties
+++ b/et/mobile/android/chrome/browser.properties
@@ -118,7 +118,7 @@ desktopNotification.dontAskAgain=Selle saidi puhul rohkem ei küsita
 # Contacts API
 contacts.allow=Luba
 contacts.dontAllow=Ära luba
-contacts.ask=Kas lubada saidil %S ligi pääseda kontaktidele?
+contacts.ask=Kas lubada saidil %S ligipääs kontaktidele?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Rohkem selle saidi puhul ei küsita
@@ -126,28 +126,28 @@ contacts.dontAskAgain=Rohkem selle saidi puhul ei küsita
 # Device Storage API
 deviceStorageMusic.allow=Luba
 deviceStorageMusic.dontAllow=Ära luba
-deviceStorageMusic.ask=Kas lubada saidil %S ligi pääseda muusikale?
+deviceStorageMusic.ask=Kas lubada saidil %S ligipääs muusikale?
 # LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageMusic.dontAskAgain=Rohkem selle saidi puhul ei küsita
 
 deviceStoragePictures.allow=Luba
 deviceStoragePictures.dontAllow=Ära luba
-deviceStoragePictures.ask=Kas lubada saidil %S ligi pääseda piltidele?
+deviceStoragePictures.ask=Kas lubada saidil %S ligipääs piltidele?
 # LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStoragePictures.dontAskAgain=Rohkem selle saidi puhul ei küsita
 
 deviceStorageSdcard.allow=Luba
 deviceStorageSdcard.dontAllow=Ära luba
-deviceStorageSdcard.ask=Kas lubada saidil %S ligi pääseda välisele andmekandjale (nt mälukaart)?
+deviceStorageSdcard.ask=Kas lubada saidil %S ligipääs välisele andmekandjale (nt mälukaart)?
 # LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageSdcard.dontAskAgain=Rohkem selle saidi puhul ei küsita
 
 deviceStorageVideos.allow=Luba
 deviceStorageVideos.dontAllow=Ära luba
-deviceStorageVideos.ask=Kas lubada saidil %S ligi pääseda videotele?
+deviceStorageVideos.ask=Kas lubada saidil %S ligipääs videotele?
 # LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageVideos.dontAskAgain=Rohkem selle saidi puhul ei küsita
