Fixes and suggestions from Marek Laane

--- a/et/browser/chrome/browser/loop/loop.properties
+++ b/et/browser/chrome/browser/loop/loop.properties
@@ -9,7 +9,7 @@ share_link_header_text=Kellegi vestlema kutsumiseks jaga järgnevat linki:
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
-invitee_name_label=Keda oled sa kutsumas?
+invitee_name_label=Keda sa soovid kutsuda?
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -39,7 +39,7 @@ display_name_available_status=Saadaval
 unable_retrieve_url=Vabandust, helistamise URLi hankimine polnud võimalik.
 session_expired_error_description=Seanss aegus. Ükski varem loodud ja jagatud URLidest ei tööta enam.
 could_not_authenticate=Autentimine polnud võimalik
-password_changed_question=Kas sa muutsid oma parooli?
+password_changed_question=Kas muutsid oma parooli?
 try_again_later=Palun proovi hiljem uuesti
 could_not_connect=Serveriga polnud võimalik ühenduda
 check_internet_connection=Palun kontrolli oma internetiühendust
@@ -55,7 +55,7 @@ retry_button=Proovi uuesti
 share_email_subject3=Sind kutsuti vestlema
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Kutse vastuvõtmiseks ja vestluse alustamiseks kopeeri või klõpsa järgneval lingil:\r\n\r\n{{callUrl}}
+share_email_body3=Kutse vastuvõtmiseks ja vestluse alustamiseks klõpsa järgneval lingil või kopeeri see:\r\n\r\n{{callUrl}}
 share_button=E-kiri
 copy_url_button=Kopeeri
 copied_url_button=Kopeeritud!
